or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

Unreleased -
  - Merge patches from FreeBSD
  - Merge patches by Roberto Puzzanghera
  - Add an option --enable-onchange-script-before-and-after to call onchange
    script before and after a change
  - Add SQLite module, adapted from MySQL module code

5.4.33 -
  Matt Brookings
  - Defaulted to Server::Disable=True in vusagec.conf
  - Fixed bug that didn't install vusagec.conf
  - Changed relevant quota code to use storage_t 64bit type
  - Fixed bug where backfill code wouldn't compile when FILE_LOCKING was
    enabled
  - Updated MySQL module to support larger quota sizes
  - Fixed typo
  - Added disable_maildrop flag to MySQL limits feature
  - More changes to allow for larger quota sizes in MySQL module

  Tullio Andreatta
  - Dynamic allocation of valias data
  - Use of open/fchdir rather than getcwd/chdir to maintain current working
    directory
  - Fixed a broken symbolic link check

  Drew Wells
  - Modification to vdelivermail to properly handle Maildir paths that begin with "./"

  <kenji@kens.fm>
  - Removed call to maildir_addquota inside user_over_maildirquota causing duplicate
    maildirsize entries

5.4.32 - Released 11-08-2010
  Matt Brookings
  - Updated maildirsize creation to set uid/gid on target
  - Updated maildirsize_read to enforce Maildir++ specifications related
    to maildirsize filesize and maildirsize modification time.
  - Fixed returning of 0 rather than NULL in client_connect
  - Updated vusage client API not to try to connect to the daemon if
    vusagec.conf does not exist
  - Fixed quota calculation bug when delivering with vusage daemon

  aledr <matrixworkstation@gmail.com>
  - Patch to secure against possible overflows when reading ezmlm configurations

  <alessio@skye.it>
  - Patch to vpopmaild to fix return value in wait_read

5.4.31 - Released 12-10-2009
   Matt Brookings
   - Released to fix leftover issue that should have been addressed in 5.4.30